--- a/index.html
+++ b/index.html
@@ -1,292 +1,11 @@
 <!DOCTYPE html>
-<html lang="zxx">
-<head>
-	<title>#jishcametrue</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="SolMusic HTML Template">
-	<meta name="keywords" content="music, html">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
-	<!-- Favicon -->
-	<link href="img/favicon.ico" rel="shortcut icon"/>
-
-	<!-- Google font -->
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap" rel="stylesheet">
+<html>
  
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/owl.carousel.min.css"/>
-	<link rel="stylesheet" href="css/slicknav.min.css"/>
-
-	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="css/style.css"/>
-
-
-	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-
-</head>
 <body>
-	<!-- Page Preloder -->
-	<div id="preloder">
-		<div class="loader"></div>
-	</div>
-
-	<!-- Header section -->
-	<!-- <header class="header-section clearfix">
-		<a href="index.html" class="site-logo">
-			<img src="img/logo.png" alt="">
-		</a>
-	
-		<!-- <ul class="main-menu">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Pages</a>
-				<ul class="sub-menu">
-					<li><a href="category.html">Category</a></li>
-					<li><a href="playlist.html">Playlist</a></li>
-					<li><a href="artist.html">Artist</a></li>
-					<li><a href="blog.html">Blog</a></li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-			</li>
-			<li><a href="blog.html">News</a></li>
-			<li><a href="contact.html">Contact</a></li>
-		</ul> 	
-	</header> -->
-	<!-- Header section end -->
-
-	<!-- Hero section -->
-	<section class="hero-section">
-		<div class="hero-slider owl-carousel">
-			<div class="hs-item">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-6">
-							<div class="hs-text">
-								<h2><span>Thank you</span> for coming.</h2>
-								<p> ** content ** </p>
-								<a href="#" class="site-btn">Share feedback</a>
-								<!-- <a href="#" class="site-btn sb-c2">Start free trial</a> -->
-							</div>
-						</div>
-						<div class="col-lg-6">
-							<div class="hr-img">
-								<img src="img/hero-bg.png" alt="">
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="hs-item">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-6">
-							<div class="hs-text">
-								<h2><span>Thank you </span> for all the love.</h2>
-								<p> **content** </p>
-								<a href="#" class="site-btn">Download Now</a>
-								<!-- <a href="#" class="site-btn sb-c2">Start free trial</a> -->
-							</div>
-						</div>
-						<div class="col-lg-6">
-							<div class="hr-img">
-								<img src="img/hero-bg.png" alt="">
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Hero section end -->
-
-	<!-- Intro section 
-	<section class="intro-section spad">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="section-title">
-						<h2>Unlimited Access to 100K tracks</h2>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-					<a href="#" class="site-btn">Try it now</a>
-				</div>
-			</div>
-		</div>
-	</section>
-	 Intro section end -->
-
-	<!-- How section 
-	<section class="how-section spad set-bg" data-setbg="img/how-to-bg.jpg">
-		<div class="container text-white">
-			<div class="section-title">
-				<h2>How it works</h2>
-			</div>
-			<div class="row">
-				<div class="col-md-4">
-					<div class="how-item">
-						<div class="hi-icon">
-							<img src="img/icons/brain.png" alt="">
-						</div>
-						<h4>Create an account</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipi-scing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. </p>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="how-item">
-						<div class="hi-icon">
-							<img src="img/icons/pointer.png" alt="">
-						</div>
-						<h4>Choose a plan</h4>
-						<p>Donec in sodales dui, a blandit nunc. Pellen-tesque id eros venenatis, sollicitudin neque sodales, vehicula nibh. Nam massa odio, portti-tor vitae efficitur non. </p>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="how-item">
-						<div class="hi-icon">
-							<img src="img/icons/smartphone.png" alt="">
-						</div>
-						<h4>Download Music</h4>
-						<p>Ablandit nunc. Pellentesque id eros venenatis, sollicitudin neque sodales, vehicula nibh. Nam massa odio, porttitor vitae efficitur non, ultric-ies volutpat tellus. </p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	How section end -->
-
-	<!-- Concept section -->
-	<section class="concept-section spad">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="section-title">
-						<h2>Highlights</h2>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<!-- <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-3 col-sm-6">
-					<div class="concept-item">
-						<img src="img/concept/1.jpg" alt="">
-						<h5>Soul Music</h5>
-					</div>
-				</div>
-				<div class="col-lg-3 col-sm-6">
-					<div class="concept-item">
-						<img src="img/concept/2.jpg" alt="">
-						<h5>Live Concerts</h5>
-					</div>
-				</div>
-				<div class="col-lg-3 col-sm-6">
-					<div class="concept-item">
-						<img src="img/concept/3.jpg" alt="">
-						<h5>Dj Sets</h5>
-					</div>
-				</div>
-				<div class="col-lg-3 col-sm-6">
-					<div class="concept-item">
-						<img src="img/concept/4.jpg" alt="">
-						<h5>Live Streems</h5>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Concept section end -->
-
-	<!-- Subscription section 
-	<section class="subscription-section spad">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="sub-text">
-						<h2>Subscription from $15/month</h2>
-						<h3>Start a free trial now</h3>
-						<p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-						<a href="#" class="site-btn">Try it now</a>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<ul class="sub-list">
-						<li><img src="img/icons/check-icon.png" alt="">Play any track</li>
-						<li><img src="img/icons/check-icon.png" alt="">Listen offline</li>
-						<li><img src="img/icons/check-icon.png" alt="">No ad interruptions</li>
-						<li><img src="img/icons/check-icon.png" alt="">Unlimited skips</li>
-						<li><img src="img/icons/check-icon.png" alt="">High quality audio</li>
-						<li><img src="img/icons/check-icon.png" alt="">Shuffle play</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</section>
-	Subscription section end -->
-
-	<!-- Premium section end -->
-	<section class="premium-section spad">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="section-title">
-						<h2>We would like to know your thoughts! </h2>
-					</div>
-				</div>
-				<div>
-					<script>(function(t,e,s,n){var o,a,c;t.SMCX=t.SMCX||[],e.getElementById(n)||(o=e.getElementsByTagName(s),a=o[o.length-1],c=e.createElement(s),c.type="text/javascript",c.async=!0,c.id=n,c.src=["https:"===location.protocol?"https://":"http://","widget.surveymonkey.com/collect/website/js/tRaiETqnLgj758hTBazgd6p6zYggdzi495iddTkNlLzRWlOuUnywwvfCgktQ0zbU.js"].join(""),a.parentNode.insertBefore(c,a))})(window,document,"script","smcx-sdk");</script><a style="font: 12px Helvetica, sans-serif; color: #999; text-decoration: none;" href=https://www.surveymonkey.com> Create your own user feedback survey </a>
-			</div>
-			</div>
-			<!-- <div class="row">
-				<div class="col-lg-3 col-sm-6">
-					<div class="premium-item">
-						<img src="img/premium/1.jpg" alt="">
-						<h4>No ad interruptions </h4>
-						<p>Consectetur adipiscing elit</p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-sm-6">
-					<div class="premium-item">
-						<img src="img/premium/2.jpg" alt="">
-						<h4>High Quality</h4>
-						<p>Ectetur adipiscing elit</p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-sm-6">
-					<div class="premium-item">
-						<img src="img/premium/3.jpg" alt="">
-						<h4>Listen Offline</h4>
-						<p>Sed do eiusmod tempor </p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-sm-6">
-					<div class="premium-item">
-						<img src="img/premium/4.jpg" alt="">
-						<h4>Download Music</h4>
-						<p>Adipiscing elit</p>
-					</div>
-				</div>
-			</div> -->
-		</div>
-	</section>
-	
-
-	
-	
-	<!--====== Javascripts & Jquery ======-->
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.slicknav.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/mixitup.min.js"></script>
-	<script src="js/main.js"></script>
-
-	</body>
+The content of the body element is displayed in your browser.
+</body>
+<script>
+window.location.replace('https://mailchi.mp/8e31930d3b0a/jishcametrue')
+ 
+</script>
 </html>
